Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-110692
Fix memory leaks
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P1: Critical
Fix Version/s:
6.6
Affects Version/s:
6.6
Component/s:
Graphs: 3D
Labels:
None
Epic Link:
QtDataVisualiztion for QtQuick3D
Commits:
b75b4c37f (dev), 0ff7dc41d (dev), e0c699fb0 (dev), 69a3030c8 (dev)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Tomi Korpipää
Reporter:
Sami Varanka
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
27 Jan '23 07:27
Updated:
11 Apr '23 09:39
Resolved:
11 Apr '23 09:39
Gerrit Reviews
There are no open Gerrit changes
Show
There are 4 closed Gerrit changes
Hide
There are 4 closed Gerrit changes
Fix Bars3D memory leaks
Gerrit Review:
Fix memory leaks from graphgallery example
Gerrit Review:
Fix Surface3D memory leaks
Gerrit Review:
Fix memory leaks in QQuickGraphScattergraph
Gerrit Review: