Fix Bars3D memory leaks

Task-number: QTBUG-110692
Change-Id: Ia57a72a6cd7d5c1873b17f1692b62d45d79b9538
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>